[gd_scene load_steps=8 format=3 uid="uid://cq5rn7vaf0r52"]

[ext_resource type="TileSet" uid="uid://dulhu4nsq70uv" path="res://Maps/DungeonTileset.tres" id="1_1ayll"]
[ext_resource type="Script" path="res://Maps/Exit.gd" id="1_7j8ig"]
[ext_resource type="FontFile" uid="uid://wige0wqmw7c7" path="res://Resources/fonts/Early GameBoy.ttf" id="3_m8v1a"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_wkgmi"]
vertices = PackedVector2Array(390, 262, 390, 310, 374, 310, 362, 298, 362, 198, 496, 262, 470, 262, 442, 234, 470, 234, 470, 406, 454, 406, 442, 362, 442, 262, 390, 234, 298, 362, 298, 310, 358, 358, 358, 374, 310, 374, 262, 26, 406, 26, 406, 42, 362, 54, 262, 54, 454, 42, 454, 90, 426, 86, 410, 70, 470, 90, 442, 134, 496, 234, 426, 134, 410, 86, 362, 70, 262, 106, 234, 106, 234, 54, 234, 26, 90, 42, 134, 54, 134, 70, 86, 70, 86, 86, 70, 86, 70, 134, 54, 134, 42, 90, 106, 234, 106, 186, 122, 186, 134, 198, 134, 298, 122, 138, 138, 138, 198, 186, 186, 198, 138, 122, 186, 122, 198, 134, 186, 106, 310, 106, 310, 122, 298, 134, 358, 122, 358, 138, 298, 186, 374, 138, 374, 186, 310, 198, 214, 186, 214, 202, 202, 214, 186, 214, 282, 202, 282, 186, 310, 214, 294, 214, 390, 186, 294, 282, 282, 294, 214, 294, 202, 282, 186, 298, 186, 282, 214, 310, 198, 310, 310, 282, 310, 298, 282, 310, 374, 358, 310, 390, 262, 390, 198, 362, 262, 442, 234, 442, 234, 390, 186, 390, 186, 374, 138, 374, 138, 358, 122, 358, 122, 310, 106, 310, 106, 262, 54, 362, 70, 362, 70, 410, 42, 406, 86, 410, 86, 426, 134, 426, 134, 442, 90, 454, 42, 454, 362, 442, 362, 426, 410, 426, 406, 454, 410, 410, 426, 410, 426, 362, 454, 454, 406, 470, 262, 470, 234, 470, 262, 496, 234, 496, 90, 470, 26, 406, 26, 262, 54, 262, 0, 262, 0, 234, 26, 234, 54, 234, 26, 90, 42, 42, 90, 26, 234, -1, 262, -1)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3, 4), PackedInt32Array(5, 6, 7, 8), PackedInt32Array(6, 9, 10, 11, 12), PackedInt32Array(7, 6, 12, 13), PackedInt32Array(14, 15, 16, 17, 18), PackedInt32Array(19, 20, 21, 22, 23), PackedInt32Array(21, 24, 25, 26, 27), PackedInt32Array(25, 28, 8, 7, 29), PackedInt32Array(8, 30, 5), PackedInt32Array(29, 31, 26, 25), PackedInt32Array(26, 32, 27), PackedInt32Array(21, 27, 33, 22), PackedInt32Array(23, 34, 35, 36), PackedInt32Array(37, 19, 23, 36, 38), PackedInt32Array(39, 40, 41, 38), PackedInt32Array(41, 42, 43), PackedInt32Array(43, 44, 45, 46), PackedInt32Array(47, 48, 49, 50, 51), PackedInt32Array(49, 52, 53, 54, 55, 50), PackedInt32Array(53, 56, 57, 58, 54), PackedInt32Array(57, 59, 35, 58), PackedInt32Array(34, 60, 61, 62, 58), PackedInt32Array(62, 61, 63, 64, 65), PackedInt32Array(65, 64, 66, 67, 4, 68), PackedInt32Array(35, 34, 58), PackedInt32Array(54, 69, 70, 71, 72, 55), PackedInt32Array(73, 74, 65, 68, 75, 76), PackedInt32Array(67, 77, 13, 4), PackedInt32Array(13, 12, 0), PackedInt32Array(13, 0, 4), PackedInt32Array(73, 76, 78, 79, 80, 81, 71, 70), PackedInt32Array(82, 83, 81, 80, 84, 85), PackedInt32Array(78, 86, 87, 15, 88, 79), PackedInt32Array(3, 2, 89, 16, 15, 87), PackedInt32Array(14, 18, 90, 91, 92), PackedInt32Array(91, 93, 94, 95), PackedInt32Array(92, 91, 95), PackedInt32Array(92, 95, 96, 97), PackedInt32Array(92, 97, 98, 99, 85), PackedInt32Array(82, 85, 99, 100, 101, 51), PackedInt32Array(101, 102, 103, 51), PackedInt32Array(104, 105, 106, 107), PackedInt32Array(106, 108, 109), PackedInt32Array(109, 110, 111, 112, 113), PackedInt32Array(114, 115, 116, 117), PackedInt32Array(116, 118, 119), PackedInt32Array(119, 120, 11, 10, 121), PackedInt32Array(119, 121, 117, 116), PackedInt32Array(114, 117, 122, 123, 93), PackedInt32Array(94, 93, 123, 124), PackedInt32Array(123, 125, 126, 124), PackedInt32Array(111, 94, 124, 127, 112), PackedInt32Array(109, 113, 107, 106), PackedInt32Array(104, 107, 128, 129, 130), PackedInt32Array(129, 131, 132, 133), PackedInt32Array(130, 129, 133, 134), PackedInt32Array(133, 135, 46, 45, 134), PackedInt32Array(46, 136, 38, 41, 43), PackedInt32Array(38, 137, 37), PackedInt32Array(37, 138, 139, 19), PackedInt32Array(38, 36, 39), PackedInt32Array(130, 134, 47, 103), PackedInt32Array(103, 47, 51)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-10, -12, 506, -11, 506, 506, -10, 506)])
source_geometry_group_name = &"navigation_polygon_source_group"

[sub_resource type="CircleShape2D" id="CircleShape2D_os0xf"]
radius = 30.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cquu1"]
size = Vector2(16, 16)

[sub_resource type="LabelSettings" id="LabelSettings_2ohol"]
font = ExtResource("3_m8v1a")
font_size = 8
outline_size = 2
outline_color = Color(0, 0, 0, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 0.784314)

[node name="Exit" type="Node2D"]
script = ExtResource("1_7j8ig")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
navigation_polygon = SubResource("NavigationPolygon_wkgmi")
navigation_layers = 2

[node name="TileMap" type="TileMap" parent="NavigationRegion2D"]
tile_set = ExtResource("1_1ayll")
format = 2
layer_0/tile_data = PackedInt32Array(0, 524288, 7, 1966110, 524288, 7, 983058, 131072, 1342177286, 917522, 131072, 1342177286, 851986, 458752, 2, 786450, 524288, 0, 720914, 589824, 0, 655378, 0, 1610612742, 589842, 196608, 1610612742, 524306, 589824, 0, 458770, 589824, 0, 393234, 131072, 6, 327698, 262144, 0, 262162, 262144, 4, 196626, 0, 805306374, 131090, 458752, 1, 65554, 196608, 6, 18, 262144, 0, 17, 65536, 0, 16, 196608, 1342177286, 15, 524288, 2, 14, 65536, 1610612742, 13, 262144, 0, 12, 196608, 0, 11, 65536, 0, 10, 65536, 0, 9, 196608, 0, 8, 196608, 0, 7, 65536, 0, 6, 131072, 0, 5, 262144, 0, 4, 0, 2, 3, 524288, 7, 2, 524288, 7, 1, 524288, 7, 65537, 0, 3, 65536, 524288, 7, 131072, 524288, 7, 196608, 524288, 7, 262144, 0, 0, 327680, 0, 0, 393216, 0, 1, 458752, 0, 3, 524288, 0, 1, 589824, 0, 1, 655360, 0, 0, 720896, 0, 2, 786432, 0, 1, 851968, 131072, 0, 917504, 458752, 2, 983040, 524288, 2, 1048576, 65536, 805306374, 1114112, 196608, 5, 1179648, 0, 3, 1245184, 0, 3, 1310720, 0, 3, 1376256, 0, 3, 1441792, 0, 3, 1507328, 0, 3, 1572864, 0, 3, 1638400, 0, 3, 1703936, 0, 4, 1769472, 524288, 7, 1835008, 524288, 7, 1900544, 524288, 7, 1966080, 524288, 7, 1966081, 524288, 7, 1900545, 0, 4, 1835009, 0, 3, 1769473, 0, 3, 1703937, 196608, 5, 1638401, 65536, 3, 1572865, 65536, 1610612742, 1507329, 0, 1610612742, 1441793, 196608, 1610612742, 1376257, 131072, 1610612742, 1310721, 196608, 1610612742, 1245185, 0, 1610612742, 1179649, 196608, 1610612742, 1114113, 131072, 1610612742, 1048577, 589824, 1, 983041, 589824, 1, 917505, 589824, 1, 851969, 196608, 1610612742, 786433, 131072, 1610612742, 720897, 196608, 1610612742, 655361, 65536, 1610612742, 589825, 196608, 1610612742, 524289, 0, 1610612742, 458753, 65536, 1610612742, 393217, 196608, 1610612742, 327681, 65536, 1, 262145, 262144, 0, 196609, 0, 3, 131073, 0, 0, 131074, 65536, 1, 65538, 65536, 0, 65539, 196608, 0, 131075, 65536, 6, 196611, 589824, 2, 196610, 0, 1610612742, 262146, 131072, 1610612742, 327682, 458752, 2, 393218, 524288, 0, 458754, 524288, 0, 524290, 458752, 2, 589826, 589824, 0, 655362, 393216, 2, 720898, 393216, 2, 786434, 458752, 2, 851970, 458752, 2, 917506, 589824, 0, 983042, 393216, 0, 1048578, 458752, 1, 1114114, 589824, 0, 1179650, 524288, 0, 1245186, 458752, 0, 1310722, 524288, 0, 1376258, 589824, 1, 1441794, 589824, 1, 1507330, 393216, 2, 1572866, 589824, 2, 1638402, 458752, 2, 1703938, 131072, 1610612742, 1769474, 196608, 1610612742, 1835010, 65536, 3, 1900546, 131072, 4, 1966082, 524288, 7, 1966083, 524288, 7, 1900547, 131072, 4, 1835011, 196608, 805306374, 1769475, 589824, 1, 1703939, 524288, 0, 1638403, 524288, 2, 1572867, 393216, 1, 1507331, 458752, 2, 1441795, 458752, 2, 1376259, 131072, 1342177286, 1310723, 131072, 1342177286, 1245187, 65536, 1342177286, 1179651, 131072, 1342177286, 1114115, 131072, 1342177286, 1048579, 589824, 0, 983043, 589824, 2, 917507, 458752, 0, 851971, 131072, 1342177286, 786435, 131072, 1342177286, 720899, 196608, 1342177286, 655363, 0, 1342177286, 589827, 0, 1342177286, 524291, 458752, 0, 458755, 589824, 2, 393219, 524288, 2, 327683, 589824, 2, 262147, 524288, 0, 262148, 458752, 1, 196612, 458752, 0, 131076, 131072, 6, 65540, 196608, 0, 65541, 65536, 1, 131077, 393216, 2, 196613, 524288, 0, 262149, 458752, 1, 327685, 262144, 3, 327684, 393216, 2, 393220, 196608, 1342177286, 458756, 0, 1342177286, 524292, 262144, 3, 589828, 262144, 5, 655364, 327680, 3, 720900, 327680, 0, 786436, 327680, 0, 851972, 131072, 0, 917508, 131072, 6, 983044, 524288, 2, 1048580, 131072, 805306374, 1114116, 0, 5, 1179652, 327680, 2, 1245188, 327680, 3, 1310724, 327680, 2, 1376260, 131072, 0, 1441796, 262144, 1, 1507332, 196608, 1342177286, 1572868, 196608, 1342177286, 1638404, 393216, 2, 1703940, 393216, 2, 1769476, 589824, 0, 1835012, 131072, 805306374, 1900548, 196608, 5, 1966084, 0, 4, 1966085, 196608, 4, 1900549, 65536, 3, 1835013, 458752, 2, 1769477, 589824, 1, 1703941, 589824, 0, 1638405, 262144, 1, 1572869, 262144, 0, 1507333, 327680, 1, 1441797, 327680, 0, 1376261, 327680, 1, 1310725, 0, 4, 1245189, 0, 2, 1179653, 0, 0, 1114117, 327680, 5, 851973, 196608, 0, 786437, 0, 3, 720901, 0, 2, 655365, 0, 3, 589829, 327680, 4, 524293, 327680, 2, 458757, 327680, 3, 393221, 0, 5, 393222, 327680, 4, 327686, 0, 5, 262150, 0, 805306374, 196614, 458752, 2, 131078, 589824, 0, 65542, 65536, 6, 65543, 0, 6, 131079, 458752, 0, 196615, 589824, 0, 262151, 0, 805306374, 327687, 131072, 4, 393223, 0, 3, 458759, 131072, 0, 458758, 0, 3, 524294, 0, 2, 589830, 0, 3, 655366, 196608, 0, 720902, 65536, 1, 786438, 131072, 1610612742, 851974, 65536, 1610612742, 917510, 458752, 1, 983046, 393216, 1, 1048582, 524288, 2, 1114118, 196608, 1610612742, 1179654, 131072, 1610612742, 1245190, 65536, 3, 1310726, 196608, 5, 1376262, 0, 1, 1441798, 0, 1, 1507334, 0, 4, 1572870, 327680, 3, 1638406, 65536, 0, 1703942, 131072, 6, 1769478, 589824, 2, 1835014, 589824, 2, 1900550, 131072, 805306374, 1966086, 196608, 4, 1966087, 65536, 4, 1900551, 0, 805306374, 1835015, 589824, 0, 1769479, 589824, 2, 1703943, 131072, 6, 1638407, 131072, 0, 1572871, 0, 4, 1507335, 196608, 5, 1441799, 65536, 3, 1376263, 196608, 1610612742, 1310727, 0, 1610612742, 1245191, 393216, 2, 1179655, 589824, 0, 1114119, 393216, 1, 1048583, 524288, 2, 983047, 524288, 2, 917511, 589824, 1, 851975, 393216, 1, 786439, 589824, 0, 720903, 524288, 0, 655367, 131072, 1610612742, 589831, 65536, 1610612742, 524295, 65536, 1, 524296, 589824, 2, 458760, 65536, 1, 393224, 131072, 0, 262152, 262144, 3, 196616, 393216, 0, 131080, 393216, 2, 65544, 0, 6, 65545, 196608, 6, 131081, 393216, 2, 196617, 131072, 805306374, 262153, 0, 5, 327689, 327680, 4, 393225, 262144, 0, 458761, 131072, 6, 524297, 589824, 0, 589833, 524288, 1, 589832, 393216, 2, 655368, 524288, 2, 720904, 589824, 1, 786440, 589824, 0, 851976, 65536, 1342177286, 917512, 0, 1342177286, 983048, 196608, 1342177286, 1048584, 131072, 1342177286, 1114120, 65536, 1342177286, 1179656, 393216, 0, 1245192, 589824, 0, 1310728, 458752, 2, 1376264, 393216, 0, 1441800, 393216, 0, 1507336, 65536, 3, 1572872, 65536, 4, 1638408, 196608, 0, 1703944, 262144, 1, 1769480, 393216, 2, 1835016, 393216, 1, 1900552, 0, 805306374, 1966088, 65536, 4, 1966089, 65536, 4, 1900553, 131072, 805306374, 1835017, 458752, 0, 1769481, 65536, 6, 1703945, 131072, 0, 1638409, 327680, 3, 1572873, 262144, 4, 1507337, 65536, 805306374, 1441801, 393216, 1, 1376265, 524288, 0, 1310729, 458752, 0, 1245193, 393216, 0, 1179657, 131072, 6, 1114121, 262144, 0, 1048585, 327680, 3, 983049, 327680, 1, 917513, 327680, 0, 851977, 0, 5, 786441, 0, 805306374, 720905, 458752, 1, 655369, 393216, 2, 655370, 393216, 2, 589834, 458752, 0, 524298, 524288, 2, 458762, 196608, 6, 393226, 131072, 0, 327690, 0, 3, 262154, 131072, 4, 196618, 65536, 805306374, 131082, 393216, 2, 65546, 0, 6, 65547, 131072, 6, 131083, 524288, 0, 196619, 65536, 805306374, 262155, 262144, 4, 327691, 196608, 0, 393227, 65536, 1, 458763, 458752, 0, 524299, 393216, 2, 589835, 524288, 1, 655371, 458752, 2, 720907, 524288, 1, 720906, 458752, 0, 786442, 65536, 805306374, 851978, 327680, 5, 917514, 0, 4, 983050, 524288, 7, 1048586, 0, 3, 1114122, 131072, 0, 1179658, 0, 6, 1245194, 393216, 1, 1310730, 393216, 0, 1376266, 524288, 0, 1441802, 458752, 1, 1507338, 0, 805306374, 1572874, 196608, 5, 1638410, 0, 4, 1703946, 262144, 0, 1769482, 65536, 6, 1835018, 589824, 1, 1900554, 65536, 805306374, 1966090, 262144, 4, 1966091, 131072, 4, 1900555, 65536, 805306374, 1835019, 524288, 0, 1769483, 131072, 6, 1703947, 65536, 0, 1638411, 65536, 4, 1572875, 65536, 3, 1507339, 524288, 1, 1441803, 589824, 1, 1376267, 524288, 1, 1310731, 458752, 2, 1245195, 393216, 2, 1179659, 458752, 1, 1114123, 65536, 1, 1048587, 65536, 0, 983051, 0, 2, 917515, 196608, 5, 851979, 65536, 3, 786443, 589824, 2, 786444, 393216, 2, 720908, 458752, 0, 655372, 0, 1342177286, 589836, 65536, 1342177286, 524300, 524288, 2, 458764, 458752, 1, 393228, 65536, 6, 327692, 131072, 0, 262156, 65536, 4, 196620, 131072, 805306374, 131084, 589824, 2, 65548, 0, 6, 65549, 196608, 6, 131085, 589824, 1, 196621, 65536, 805306374, 262157, 196608, 5, 327693, 131072, 0, 393229, 0, 6, 458765, 393216, 0, 524301, 196608, 805306374, 589837, 0, 5, 655373, 131072, 0, 720909, 262144, 1, 786445, 524288, 1, 851981, 524288, 0, 851980, 393216, 0, 917516, 131072, 1610612742, 983052, 196608, 1610612742, 1048588, 0, 1610612742, 1114124, 589824, 1, 1179660, 458752, 0, 1245196, 524288, 0, 1310732, 131072, 1342177286, 1376268, 0, 1342177286, 1441804, 589824, 1, 1507340, 524288, 0, 1572876, 131072, 805306374, 1638412, 262144, 4, 1703948, 65536, 0, 1769484, 131072, 6, 1835020, 589824, 1, 1900556, 65536, 805306374, 1966092, 65536, 4, 1966093, 196608, 5, 1900557, 196608, 805306374, 1835021, 589824, 0, 1769485, 65536, 6, 1703949, 65536, 0, 1638413, 196608, 5, 1572877, 196608, 805306374, 1507341, 393216, 0, 1441805, 131072, 6, 1376269, 131072, 0, 1310733, 0, 5, 1245197, 262144, 3, 1179661, 458752, 2, 1114125, 524288, 1, 1048589, 393216, 2, 983053, 393216, 0, 917517, 589824, 0, 917518, 458752, 0, 851982, 393216, 1, 786446, 0, 6, 720910, 131072, 0, 655374, 327680, 1, 589838, 65536, 4, 524302, 131072, 805306374, 458766, 458752, 2, 393230, 393216, 2, 327694, 0, 1610612742, 262158, 0, 1610612742, 196622, 589824, 0, 131086, 458752, 1, 65550, 458752, 2, 65551, 393216, 1, 131087, 524288, 2, 196623, 524288, 2, 262159, 393216, 1, 327695, 524288, 2, 393231, 524288, 2, 458767, 458752, 2, 524303, 131072, 805306374, 589839, 131072, 4, 655375, 524288, 7, 720911, 262144, 0, 786447, 196608, 6, 851983, 458752, 1, 917519, 458752, 2, 983055, 524288, 2, 983054, 589824, 1, 1048590, 524288, 1, 1114126, 458752, 1, 1179662, 0, 805306374, 1245198, 0, 5, 1310734, 327680, 4, 1376270, 196608, 0, 1441806, 131072, 6, 1507342, 393216, 0, 1572878, 458752, 0, 1638414, 196608, 1610612742, 1703950, 196608, 1610612742, 1769486, 589824, 2, 1835022, 589824, 2, 1900558, 524288, 0, 1966094, 0, 1610612742, 1966095, 393216, 0, 1900559, 524288, 2, 1835023, 393216, 0, 1769487, 524288, 0, 1703951, 458752, 0, 1638415, 524288, 0, 1572879, 393216, 1, 1507343, 393216, 1, 1441807, 131072, 6, 1376271, 262144, 0, 1310735, 524288, 7, 1245199, 262144, 4, 1179663, 65536, 805306374, 1114127, 589824, 0, 1048591, 393216, 2, 1048592, 589824, 0, 983056, 589824, 1, 917520, 524288, 0, 851984, 524288, 2, 786448, 65536, 6, 720912, 131072, 0, 655376, 0, 0, 589840, 262144, 4, 524304, 131072, 805306374, 458768, 589824, 0, 393232, 524288, 0, 327696, 196608, 1342177286, 262160, 131072, 1342177286, 196624, 524288, 0, 131088, 524288, 1, 65552, 458752, 2, 65553, 65536, 6, 131089, 458752, 1, 196625, 0, 805306374, 262161, 0, 5, 327697, 131072, 0, 393233, 0, 6, 458769, 458752, 2, 524305, 196608, 805306374, 589841, 327680, 5, 655377, 65536, 0, 720913, 65536, 1, 786449, 393216, 1, 851985, 589824, 0, 917521, 393216, 0, 983057, 393216, 1, 1048593, 458752, 1, 1114129, 524288, 0, 1114128, 393216, 1, 1179664, 131072, 805306374, 1245200, 196608, 5, 1310736, 0, 4, 1376272, 262144, 0, 1441808, 196608, 6, 1507344, 393216, 1, 1572880, 524288, 2, 1638416, 196608, 1342177286, 1703952, 131072, 1342177286, 1769488, 393216, 1, 1835024, 458752, 2, 1900560, 524288, 2, 1966096, 196608, 1342177286, 1966097, 0, 5, 1900561, 131072, 805306374, 1835025, 393216, 2, 1769489, 0, 6, 1703953, 65536, 0, 1638417, 0, 5, 1572881, 196608, 805306374, 1507345, 458752, 2, 1441809, 0, 6, 1376273, 262144, 0, 1310737, 327680, 5, 1245201, 65536, 3, 1179665, 589824, 1, 1179666, 393216, 0, 1114130, 458752, 1, 1048594, 196608, 1342177286, 1048595, 131072, 0, 983059, 327680, 3, 917523, 0, 5, 851987, 262144, 3, 786451, 524288, 2, 720915, 393216, 1, 655379, 458752, 0, 589843, 589824, 0, 524307, 393216, 1, 458771, 524288, 1, 393235, 262144, 1, 327699, 131072, 0, 262163, 196608, 4, 196627, 65536, 805306374, 131091, 393216, 2, 65555, 196608, 6, 19, 196608, 0, 20, 262144, 0, 65556, 131072, 6, 131092, 393216, 2, 196628, 65536, 805306374, 262164, 131072, 4, 327700, 327680, 1, 393236, 131072, 0, 458772, 131072, 6, 524308, 393216, 1, 589844, 393216, 2, 655380, 524288, 1, 720916, 458752, 2, 786452, 0, 805306374, 851988, 0, 5, 917524, 327680, 4, 983060, 524288, 7, 1048596, 327680, 3, 1114132, 65536, 0, 1114131, 262144, 1, 1179667, 524288, 2, 1245203, 458752, 1, 1245202, 589824, 1, 1310738, 65536, 1610612742, 1376274, 0, 1610612742, 1441810, 458752, 1, 1507346, 393216, 2, 1572882, 196608, 805306374, 1638418, 196608, 4, 1703954, 196608, 0, 1769490, 0, 6, 1835026, 524288, 2, 1900562, 0, 805306374, 1966098, 131072, 4, 1966099, 196608, 4, 1900563, 0, 805306374, 1835027, 524288, 2, 1769491, 196608, 6, 1703955, 131072, 0, 1638419, 131072, 4, 1572883, 262144, 3, 1507347, 393216, 2, 1441811, 589824, 2, 1376275, 589824, 0, 1310739, 589824, 0, 1310740, 393216, 2, 1245204, 524288, 1, 1179668, 196608, 6, 1179669, 0, 6, 1114133, 262144, 0, 1048597, 0, 2, 983061, 0, 0, 917525, 0, 3, 851989, 196608, 5, 786453, 196608, 805306374, 720917, 458752, 0, 655381, 393216, 1, 589845, 393216, 1, 524309, 524288, 0, 458773, 131072, 6, 393237, 262144, 0, 327701, 0, 4, 262165, 327680, 5, 196629, 65536, 805306374, 131093, 589824, 0, 65557, 65536, 6, 21, 196608, 0, 22, 196608, 0, 65558, 131072, 6, 131094, 458752, 1, 196630, 589824, 0, 262166, 65536, 3, 327702, 131072, 4, 393238, 196608, 0, 458774, 262144, 1, 524310, 524288, 1, 589846, 524288, 0, 655382, 524288, 0, 720918, 524288, 0, 786454, 393216, 1, 851990, 196608, 1610612742, 917526, 0, 1610612742, 983062, 65536, 1610612742, 1048598, 131072, 1610612742, 1114134, 65536, 1610612742, 1179670, 589824, 1, 1245206, 393216, 2, 1245205, 589824, 1, 1310741, 458752, 2, 1376277, 393216, 2, 1376276, 458752, 0, 1441812, 524288, 2, 1507348, 65536, 805306374, 1572884, 262144, 5, 1638420, 327680, 4, 1703956, 262144, 0, 1769492, 196608, 6, 1835028, 589824, 0, 1900564, 0, 805306374, 1966100, 131072, 4, 1966101, 196608, 4, 1900565, 0, 805306374, 1835029, 393216, 2, 1769493, 65536, 6, 1703957, 262144, 0, 1638421, 0, 3, 1572885, 131072, 4, 1507349, 65536, 805306374, 1441813, 393216, 2, 1441814, 524288, 2, 1376278, 458752, 0, 1310742, 524288, 0, 1310743, 262144, 2, 1245207, 524288, 1, 1179671, 458752, 2, 1114135, 524288, 2, 1048599, 589824, 2, 983063, 589824, 0, 917527, 393216, 1, 851991, 589824, 0, 786455, 589824, 1, 720919, 524288, 0, 655383, 65536, 1342177286, 589847, 196608, 1342177286, 524311, 262144, 1, 458775, 262144, 0, 393239, 327680, 0, 327703, 65536, 4, 262167, 65536, 805306374, 196631, 393216, 0, 131095, 589824, 1, 65559, 65536, 6, 23, 196608, 0, 24, 196608, 0, 65560, 131072, 6, 131096, 589824, 1, 196632, 589824, 0, 262168, 131072, 805306374, 327704, 196608, 5, 393240, 0, 4, 458776, 327680, 1, 524312, 327680, 3, 589848, 327680, 2, 655384, 65536, 0, 720920, 262144, 1, 786456, 0, 1342177286, 851992, 0, 1342177286, 917528, 524288, 0, 983064, 458752, 1, 1048600, 458752, 2, 1114136, 262144, 2, 1179672, 262144, 2, 1245208, 262144, 3, 1310744, 0, 5, 1376280, 327680, 3, 1376279, 262144, 2, 1441815, 262144, 3, 1507351, 262144, 5, 1507350, 262144, 3, 1572886, 131072, 4, 1638422, 262144, 0, 1703958, 65536, 1, 1769494, 393216, 1, 1835030, 524288, 0, 1900566, 196608, 805306374, 1966102, 196608, 4, 1966103, 196608, 4, 1900567, 131072, 805306374, 1835031, 393216, 1, 1769495, 589824, 2, 1703959, 0, 6, 1638423, 262144, 0, 1572887, 327680, 4, 1572888, 0, 3, 1507352, 327680, 4, 1441816, 327680, 3, 1441817, 0, 1, 1376281, 0, 3, 1310745, 327680, 4, 1245209, 327680, 1, 1179673, 327680, 2, 1114137, 0, 5, 1048601, 196608, 805306374, 983065, 393216, 0, 917529, 65536, 6, 851993, 65536, 0, 786457, 327680, 2, 720921, 327680, 2, 655385, 327680, 1, 589849, 0, 4, 524313, 0, 2, 458777, 0, 2, 393241, 196608, 5, 327705, 65536, 3, 262169, 458752, 0, 196633, 393216, 1, 131097, 458752, 0, 65561, 262144, 1, 25, 65536, 0, 26, 327680, 3, 65562, 131072, 0, 131098, 196608, 6, 196634, 458752, 1, 262170, 589824, 0, 327706, 458752, 0, 393242, 65536, 1610612742, 458778, 65536, 1610612742, 524314, 65536, 3, 589850, 327680, 5, 655386, 0, 1, 720922, 0, 1, 786458, 0, 1, 851994, 65536, 0, 917530, 196608, 6, 983066, 524288, 1, 1048602, 65536, 805306374, 1114138, 327680, 5, 1179674, 0, 2, 1245210, 0, 3, 1310746, 0, 3, 1376282, 131072, 0, 1441818, 65536, 1, 1507354, 65536, 1610612742, 1507353, 0, 1, 1572889, 65536, 0, 1638425, 65536, 1, 1638424, 262144, 0, 1703960, 196608, 6, 1769496, 524288, 2, 1835032, 589824, 2, 1900568, 65536, 805306374, 1966104, 65536, 4, 1966105, 131072, 4, 1900569, 262144, 3, 1835033, 458752, 1, 1769497, 589824, 1, 1703961, 524288, 0, 1703962, 393216, 1, 1638426, 458752, 2, 1572890, 131072, 1610612742, 1572891, 589824, 0, 1507355, 393216, 1, 1441819, 524288, 0, 1376283, 196608, 1610612742, 1310747, 196608, 1610612742, 1245211, 0, 1610612742, 1179675, 0, 1610612742, 1114139, 196608, 1610612742, 1048603, 524288, 0, 983067, 524288, 0, 917531, 458752, 0, 851995, 131072, 1610612742, 786459, 0, 1610612742, 720923, 0, 1610612742, 655387, 65536, 1610612742, 589851, 131072, 1610612742, 524315, 589824, 2, 458779, 458752, 0, 393243, 524288, 0, 327707, 589824, 0, 262171, 458752, 2, 196635, 524288, 0, 131099, 196608, 6, 65563, 262144, 0, 27, 524288, 7, 28, 524288, 7, 65564, 65536, 0, 131100, 262144, 1, 196636, 196608, 1342177286, 262172, 196608, 1342177286, 327708, 458752, 2, 393244, 524288, 1, 458780, 458752, 2, 524316, 458752, 2, 589852, 524288, 0, 655388, 393216, 1, 720924, 458752, 2, 786460, 524288, 1, 851996, 524288, 1, 917532, 393216, 0, 983068, 458752, 2, 1048604, 589824, 1, 1114140, 458752, 0, 1179676, 524288, 1, 1245212, 458752, 0, 1310748, 393216, 1, 1376284, 393216, 2, 1441820, 524288, 2, 1507356, 393216, 0, 1572892, 393216, 0, 1638428, 524288, 1, 1638427, 589824, 1, 1703963, 393216, 2, 1769499, 524288, 1, 1769498, 589824, 2, 1835034, 0, 805306374, 1900570, 0, 5, 1966106, 327680, 4, 1966107, 524288, 7, 1900571, 65536, 4, 1835035, 65536, 805306374, 1835036, 262144, 3, 1769500, 131072, 1342177286, 1703964, 196608, 1342177286, 1703965, 0, 5, 1638429, 262144, 3, 1572893, 131072, 1342177286, 1507357, 131072, 1342177286, 1441821, 0, 1342177286, 1376285, 65536, 1342177286, 1310749, 0, 1342177286, 1245213, 131072, 1342177286, 1179677, 0, 1342177286, 1114141, 131072, 1342177286, 1048605, 524288, 0, 983069, 458752, 1, 917533, 393216, 2, 851997, 65536, 1342177286, 786461, 65536, 1342177286, 720925, 131072, 1342177286, 655389, 0, 1342177286, 589853, 131072, 1342177286, 524317, 0, 1342177286, 458781, 196608, 1342177286, 393245, 65536, 1342177286, 327709, 262144, 1, 262173, 65536, 0, 196637, 327680, 1, 131101, 327680, 2, 65565, 327680, 3, 29, 524288, 7, 30, 524288, 7, 65566, 524288, 7, 131102, 524288, 7, 196638, 524288, 7, 262174, 327680, 2, 327710, 327680, 1, 393246, 327680, 1, 458782, 327680, 2, 524318, 327680, 0, 589854, 327680, 0, 655390, 327680, 1, 720926, 327680, 3, 786462, 327680, 1, 851998, 262144, 0, 917534, 589824, 1, 983070, 458752, 2, 1048606, 196608, 805306374, 1114142, 262144, 5, 1179678, 327680, 1, 1245214, 327680, 2, 1310750, 327680, 1, 1376286, 327680, 2, 1441822, 327680, 2, 1507358, 327680, 3, 1572894, 327680, 1, 1638430, 327680, 2, 1703966, 327680, 4, 1769502, 524288, 7, 1769501, 327680, 1, 1835037, 327680, 1, 1900573, 327680, 4, 1900572, 262144, 4, 1966108, 524288, 7, 1966109, 524288, 7, 1900574, 524288, 7, 1835038, 524288, 7, 917509, 65536, 6, 983045, 393216, 0, 1048581, 131072, 805306374, 327688, 131072, 4)
layer_1/name = "elements"
layer_1/tile_data = PackedInt32Array(983055, 524288, 3)

[node name="ExitDoorArea" type="Area2D" parent="."]
position = Vector2(248, 248)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitDoorArea"]
shape = SubResource("CircleShape2D_os0xf")

[node name="ExitDoor" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExitDoor"]
position = Vector2(248, 248)
shape = SubResource("RectangleShape2D_cquu1")

[node name="ExitLabel" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = 232.0
offset_top = 230.0
offset_right = 264.0
offset_bottom = 240.0
text = "EXIT"
label_settings = SubResource("LabelSettings_2ohol")

[connection signal="body_entered" from="ExitDoorArea" to="." method="_on_exit_door_area_body_entered"]
[connection signal="body_exited" from="ExitDoorArea" to="." method="_on_exit_door_area_body_exited"]
[connection signal="input_event" from="ExitDoor" to="." method="_on_exit_door_input_event"]
